--- a/k/dev-set/main.yaml
+++ b/k/dev-set/main.yaml
@@ -16,6 +16,18 @@ spec:
       - name: argo-workflows
         namespace: argo-workflows
         cluster: in-cluster
+      - name: traefik
+        namespace: traefik
+        cluster: in-cluster
+      - name: vault
+        namespace: vault
+        cluster: in-cluster
+      - name: loft
+        namespace: loft
+        cluster: in-cluster
+      - name: vc0
+        namespace: vc0
+        cluster: in-cluster
   template:
     metadata:
       name: "{{name}}"
