--- a/Makefile.common
+++ b/Makefile.common
@@ -71,13 +71,18 @@ sync:
 		"$$v" get ns; \
 		~/bin/e env KUBECONFIG=$$KUBECONFIG_ALL argocd cluster add "loft-vcluster_$${v}_$${v}_loft-cluster" --name "$$v" --yes; \
 		while true; do if [[ "$$(argocd cluster get "$$v" --output json | jq -r '.name')" == "$$v" ]]; then break; fi; sleep 1; done; \
+		kubectl --context argocd apply -f "k/$$v-set/main.yaml"; \
+		case "$$v" in \
+			vc0) \
+				argocd --kube-context argocd app sync vc0-kuma-global --local k/vc0-kuma-global --assumeYes --prune; \
+				argocd --kube-context argocd app wait vc0-kuma-global; \
+				;; \
+			vc1) \
+				argocd --kube-context argocd app sync vc1-kuma-remote --local k/vc1-kuma-remote --assumeYes --prune; \
+				argocd --kube-context argocd app wait vc1-kuma-remote; \
+				;; \
+		esac; \
 	done
-	kubectl --context argocd apply -f k/vc0-kuma-global-application.yaml
-	argocd --kube-context argocd app sync vc0-kuma-global --local k/vc0-kuma-global --assumeYes --prune
-	argocd --kube-context argocd app wait vc0-kuma-global
-	kubectl --context argocd apply -f k/vc1-kuma-remote-application.yaml
-	argocd --kube-context argocd app sync vc1-kuma-remote --local k/vc1-kuma-remote --assumeYes --prune
-	argocd --kube-context argocd app wait vc1-kuma-remote
 
 kubeconfig:
 	sudo cp /run/secrets/kubernetes.io/serviceaccount/ca.crt /usr/local/share/ca-certificates/
