--- a/k/vc1-kuma-remote/kustomization.yaml
+++ b/k/vc1-kuma-remote/kustomization.yaml
@@ -9,4 +9,10 @@ helmCharts:
   includeCRDs: true
   valuesInline:
     controlPlane:
-      mode: global
+      mode: zone
+      zone: vc1
+      kdsGlobalAddress: grpcs://169.254.32.1:5685
+    ingress:
+      enabled: true
+      service:
+        port: 10001
