--- a/Makefile.common
+++ b/Makefile.common
@@ -73,7 +73,7 @@ vc0 vc1:
 		while true; do if kubectl --context pod wait -n "$$v" -l statefulset.kubernetes.io/pod-name="$$v"-0 --for=condition=ContainersReady pod; then break; fi; sleep 1; done; \
 		argocd --kube-context argocd app wait "$$v"; \
 		"$$v" get ns; \
-		~/bin/e env KUBECONFIG=$$KUBECONFIG_ALL argocd cluster add "loft-vcluster_$${v}_$${v}_loft-cluster" --name "$$v" --yes; \
+		~/bin/e env KUBECONFIG=$$KUBECONFIG_ALL argocd cluster add --upsert "loft-vcluster_$${v}_$${v}_loft-cluster" --name "$$v" --yes; \
 		while true; do if [[ "$$(argocd cluster get "$$v" --output json | jq -r '.name')" == "$$v" ]]; then break; fi; sleep 1; done; \
 		kubectl --context argocd apply -f "k/sets/$$v.yaml"; \
 		case "$$v" in \
