cd to work/dev if possible

--- a/Makefile.common
+++ b/Makefile.common
@@ -112,10 +112,17 @@ clean:
 	touch ~/.registry.txt
 
 images:
+	git push
+	if [[ -d work/dev ]]; then cd work/dev; git pull; $(MAKE) $@-inner; fi
+
+images-inner
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +images --repo=$(repo)
 
 updates:
 	git pull
+	if [[ -d work/dev ]]; then cd work/dev; git pull; $(MAKE) $@-inner; fi
+
+updates-inner:
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +updates --repo=$(repo) --repo_from=$(repo_from)
 
 shell:
