build when no work/dev

--- a/Makefile.common
+++ b/Makefile.common
@@ -113,14 +113,14 @@ clean:
 
 images:
 	git push
-	if [[ -d work/dev ]]; then cd work/dev; git pull; $(MAKE) $@-inner; fi
+	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
 images-inner:
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +images --repo=$(repo)
 
 updates:
 	git pull
-	if [[ -d work/dev ]]; then cd work/dev; git pull; $(MAKE) $@-inner; fi
+	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
 updates-inner:
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +updates --repo=$(repo) --repo_from=$(repo_from)
