--- a/k/sets/vc0.yaml
+++ b/k/sets/vc0.yaml
@@ -3,6 +3,8 @@ kind: ApplicationSet
 metadata:
   name: vc0
   namespace: argocd
+  labels:
+    argocd.argoproj.io/instance: sets
 spec:
   generators:
   - list:
