--- a/Makefile.common
+++ b/Makefile.common
@@ -41,7 +41,6 @@ init-dev:
 	$(MAKE) argocd-login
 	kubectl --context argocd apply -f k/sets.yaml
 	argocd --kube-context argocd app sync sets --local k/sets --assumeYes --prune
-	argocd --kube-context argocd app wait sets
 
 argocd-login:
 	argocd login --insecure argocd-server.argocd.svc --username admin --password adminadmin \
@@ -68,6 +67,8 @@ sync:
 	loft login https://loft.loft.svc.cluster.local --insecure --access-key admin
 	$(MAKE) vc0
 	$(MAKE) vc1
+	argocd --kube-context argocd app sync sets --local k/sets --assumeYes --prune
+	argocd --kube-context argocd app wait sets
 
 vc0 vc1:
 	set -x; for v in "$@"; do \
