sleep before argocd login

--- a/Makefile.common
+++ b/Makefile.common
@@ -38,7 +38,7 @@ init-dev:
 	-kubectl --context pod create namespace argocd
 	kustomize build --enable-helm k/argocd | kubectl --context argocd apply -f -
 	kubectl --context argocd rollout status deployment argocd-server --watch
-	$(MAKE) argocd-login
+	sleep 10; $(MAKE) argocd-login
 	kubectl --context argocd apply -f k/sets.yaml
 	argocd --kube-context argocd app sync sets --local k/sets --assumeYes --prune
 	argocd --kube-context argocd app wait sets
