--- a/k/knative/kustomization.yaml
+++ b/k/knative/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: knative-serving
 # https://github.com/knative/serving/releases/download/knative-v1.5.0/serving-default-domain.yaml
 
 resources:
+- ns.yaml
 - serving-core.yaml
 - serving-default-domain.yaml
 
