--- a/k/knative/namespace-knative-serving.yaml
+++ b/k/knative/namespace-knative-serving.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: knative-serving
   labels:
-    kuma.io/sidecar-injection: "enabled"
+    kuma.io/sidecar-injection: "disabled"
