--- a/k/kong/kustomization.yaml
+++ b/k/kong/kustomization.yaml
@@ -18,7 +18,7 @@ resources:
 
 patchesStrategicMerge:
 - |-
-  apiVersion: apps/v1
+  apiVersion: v1
   kind: Service
   metadata:
     name: kong-kong-proxy
