--- a/k/sets/dev.yaml
+++ b/k/sets/dev.yaml
@@ -65,5 +65,5 @@ spec:
         group: apps
         name: kong-kong
         jsonPointers:
-          - /spec/tolerations
+          - /tolerations
 
