--- a/k/sets/dev.yaml
+++ b/k/sets/dev.yaml
@@ -61,6 +61,11 @@ spec:
         name: vault-agent-injector-cfg
         jsonPointers:
           - /webhooks/0/clientConfig/caBundle
+      - kind: ValidatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: validation.webhook.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
       - kind: Deployment
         group: apps
         name: kong-kong
