--- a/k/sets/dev.yaml
+++ b/k/sets/dev.yaml
@@ -61,9 +61,24 @@ spec:
         name: vault-agent-injector-cfg
         jsonPointers:
           - /webhooks/0/clientConfig/caBundle
+      - kind: MutatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: webhook.domainmapping.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
+      - kind: MutatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: webhook.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
       - kind: ValidatingWebhookConfiguration
         group: admissionregistration.k8s.io
         name: validation.webhook.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
+      - kind: ValidatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: validation.webhook.domainmapping.serving.knative.dev
         jsonPointers:
           - /webhooks/0/rules
       - kind: Deployment
