use kntive ingress

--- a/k/knative/configmap-config-network.yaml
+++ b/k/knative/configmap-config-network.yaml
@@ -4,4 +4,4 @@ metadata:
   name: config-network
   namespace: knative-serving
 data:
-  ingress-class: kong
+  ingress-class: kourier.ingress.networking.knative.dev
