--- a/k/kourier/kustomization.yaml
+++ b/k/kourier/kustomization.yaml
@@ -2,3 +2,4 @@ namespace: kourier-system
 
 resources:
 - https://github.com/knative-sandbox/net-kourier/releases/download/knative-v1.6.0/kourier.yaml
+- configmap-config-network.yaml
