--- a/Makefile.common
+++ b/Makefile.common
@@ -20,6 +20,9 @@ cache:
 registry:
 	-k3d registry create registry --port 0.0.0.0:5000
 	-k3d registry create docker-io --proxy-remote-url https://registry-1.docker.io --port 0.0.0.0:5001
+	-k3d registry create gcr-io --proxy-remote-url https://gcr.io --port 0.0.0.0:5002
+	-k3d registry create ghcr-io --proxy-remote-url https://ghcr.io --port 0.0.0.0:5003
+	-k3d registry create quay-io --proxy-remote-url https://quay.io --port 0.0.0.0:5004
 
 dev:
 	-git pull
