--- a/Makefile.common
+++ b/Makefile.common
@@ -67,7 +67,7 @@ sync:
 	kubectl --context pod apply -f k/admin.yaml
 	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
 	-while true; do if kubectl --context pod wait -n vault -l statefulset.kubernetes.io/pod-name=vault-0 --for=condition=Initialized pod; then break; fi; sleep 1; done
-	-$(MAKE) vault-restore
+	-while true; do if $(MAKE) vault-restore; then break; fi; sleep 1; done
 	-$(MAKE) vault-unseal
 	-while true; do if kubectl --context pod wait -n vault -l statefulset.kubernetes.io/pod-name=vault-0 --for=condition=Ready pod; then break; fi; sleep 1; done
 	argocd --kube-context argocd app wait vault
