--- a/k/knative/kustomization.yaml
+++ b/k/knative/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
 - https://github.com/knative/serving/releases/download/knative-v1.6.0/serving-core.yaml
 
 patchesStrategicMerge:
+- configmap-config-network.yaml
 - configmap-config-domain.yaml
 - namespace-knative-serving.yaml
