--- a/k/sets/vc1.yaml
+++ b/k/sets/vc1.yaml
@@ -37,6 +37,31 @@ spec:
         name: vault-agent-injector-cfg
         jsonPointers:
           - /webhooks/0/clientConfig/caBundle
+      - kind: MutatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: webhook.domainmapping.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
+      - kind: MutatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: webhook.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
+      - kind: ValidatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: validation.webhook.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
+      - kind: ValidatingWebhookConfiguration
+        group: admissionregistration.k8s.io
+        name: validation.webhook.domainmapping.serving.knative.dev
+        jsonPointers:
+          - /webhooks/0/rules
+      - kind: Deployment
+        group: apps
+        name: kong-kong
+        jsonPointers:
+          - /spec/template/spec/tolerations
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
