knative has webhooks, doesnt like kuma

--- a/k/vc1-knative/ns.yaml
+++ b/k/vc1-knative/ns.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: knative-serving
   labels:
-    kuma.io/sidecar-injection: "true"
+    kuma.io/sidecar-injection: "false"
