--- a/k/vc1-demo/dev.yaml
+++ b/k/vc1-demo/dev.yaml
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         app: dev
+      annotations:
+        kuma.io/mesh: demo
     spec:
       terminationGracePeriodSeconds: 10
       containers:
