--- a/k/vc1-kourier/ns.yaml
+++ b/k/vc1-kourier/ns.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: kourier-system
   labels:
-    kuma.io/sidecar-injection: "true"
+    kuma.io/sidecar-injection: "false"
