kourier in demo mesh

--- a/k/vc1-kourier/ns.yaml
+++ b/k/vc1-kourier/ns.yaml
@@ -3,4 +3,6 @@ kind: Namespace
 metadata:
   name: kourier-system
   labels:
-    kuma.io/sidecar-injection: "false"
+    kuma.io/sidecar-injection: "true"
+  annotations:
+    kuma.io/mesh: demo
