--- a/k/mesh.yaml
+++ b/k/mesh.yaml
@@ -8,6 +8,7 @@ spec:
     backends:
       - name: ca-1
         type: builtin
+        mode: PERMISSIVE
         dpCert:
           rotation:
             expiration: 1d
