run kong in dev

--- a/k/sets/dev.yaml
+++ b/k/sets/dev.yaml
@@ -33,6 +33,9 @@ spec:
           - name: vc1
             namespace: vc1
             cluster: in-cluster
+          - name: dev-kuma-remote
+            namespace: kuma
+            cluster: in-cluster
   template:
     metadata:
       name: "{{name}}"
