--- a/k/vc1-kuma-remote/kustomization.yaml
+++ b/k/vc1-kuma-remote/kustomization.yaml
@@ -13,6 +13,6 @@ helmCharts:
       zone: vc1
       kdsGlobalAddress: grpcs://169.254.32.1:5685
     ingress:
-      enabled: true
+      enabled: "true"
       service:
         port: 10001
