--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -8,7 +8,7 @@ helmCharts:
   repo: https://charts.konghq.com
   valuesInline:
     manager:
-      enabled: "false"
+      enabled: false
     enterprise:
       enabled: true
   includeCRDs: true
