--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -7,6 +7,8 @@ helmCharts:
   version: 2.11.0
   repo: https://charts.konghq.com
   valuesInline:
+    portal:
+      enabled: false
     manager:
       enabled: false
     enterprise:
