turn off admin tls

--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -7,6 +7,8 @@ helmCharts:
   version: 2.11.0
   repo: https://charts.konghq.com
   valuesInline:
+    admin:
+      tls: {}
     portalapi:
       enabled: false
     portal:
