arch specific builds

--- a/Makefile.site
+++ b/Makefile.site
@@ -18,7 +18,7 @@ reboot-inner:
 	$(MAKE) cluster
 	$(MAKE) attach
 
-images:
+images amd arm:
 	git push
 	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
@@ -26,6 +26,12 @@ images-inner:
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +amd64 --repo=$(repo)
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +arm64 --repo=$(repo)
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +images --repo=$(repo)
+
+amd-inner:
+	earthly --remote-cache=$(cache)defn/cache:images $(push) +amd64 --repo=$(repo)
+
+arm-inner:
+	earthly --remote-cache=$(cache)defn/cache:images $(push) +arm64 --repo=$(repo)
 
 updates:
 	git push
