--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -26,10 +26,12 @@ spec:
             - name: work
               mountPath: /home/ubuntu/work
         - name: buildkitd
-          image: earthly/buildkitd:v0.6.19 
+          image: earthly/buildkitd:v0.6.19
           volumeMounts:
             - name: earthly
               mountPath: /tmp/earthly
+          securityContext:
+            privileged: true
       volumes:
         - name: docker-sock
           hostPath:
