--- a/.earthly/config.yaml
+++ b/.earthly/config.yaml
@@ -4,3 +4,7 @@ global:
   secret_provider: earthly-secret-provider
   cache_size_pct: 90
   disable_log_sharing: true
+  buildkit_additional_config: |
+    [registry."k3d-registry"]
+      http = true
+      insecure = true
