--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -28,7 +28,7 @@ spec:
         - name: vault-agent
           image: k3d-registry:5000/defn/dev:latest
           command: ["/usr/bin/tini", "--"]
-          args: ["vault", "agent", "-config", "etc/agent.hcl"]
+          args: ["/home/ubuntu/bin/e", "vault", "agent", "-config", "etc/agent.hcl"]
         - name: kuma-cp
           image: k3d-registry:5000/defn/dev:latest
           command: ["/usr/bin/tini", "--"]
