simplify tilt ui

--- a/Makefile.common
+++ b/Makefile.common
@@ -186,6 +186,9 @@ cluster-inner:
 	kubectl apply -f k/dev/main.yaml
 	while true; do if kubectl rollout status statefulset dev --watch; then break; fi; sleep 5; done
 
+vault-backup:
+	kubectl exec -n vault vault-0 -- tar cfz - /vault/data | (cd ~/.password-store && tar xvfz - && git add vault && git add -u vault && git commit -m 'vault backup' && git push)
+
 vault-restore:
 	(cd ~/.password-store && tar cfz - vault) | kubectl --context pod exec -i -n vault vault-0 -- tar xvfz - -C /;
 
