--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -19,7 +19,7 @@ spec:
           image: k3d-registry:5000/defn/dev:latest
           imagePullPolicy: Always
           command: ["/usr/bin/tini", "--"]
-          args: ["make", "monitor-loop"]
+          args: ["tail", "-f", "/dev/null"]
           volumeMounts:
             - name: docker-sock
               mountPath: /var/run/docker.sock
