--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -14,6 +14,18 @@ spec:
         app: dev
     spec:
       terminationGracePeriodSeconds: 10
+      initContainers:
+        - name: sysctls
+          image: busybox
+          command:
+          - sh
+          - -c
+          - sysctl -w net.ipv4.ip_forward=1 && sysctl -w net.ipv4.conf.all.forwarding=1
+          securityContext:
+            capabilities:
+              add:
+                - NET_ADMIN
+            privileged: true
       containers:
         - name: dev
           image: k3d-registry:5000/defn/dev:latest
@@ -21,6 +33,8 @@ spec:
           command: ["/usr/bin/tini", "--"]
           args: ["tail", "-f", "/dev/null"]
           volumeMounts:
+            - name: scratch
+              mountPath: /scratch
             - name: docker-sock
               mountPath: /var/run/docker.sock
             - name: work
@@ -29,14 +43,23 @@ spec:
           image: k3d-registry:5000/defn/dev:latest
           command: ["/usr/bin/tini", "--"]
           args: ["/home/ubuntu/bin/e", "vault", "agent", "-config", "etc/agent.hcl"]
+          volumeMounts:
+            - name: scratch
+              mountPath: /scratch
         - name: kuma-cp
           image: k3d-registry:5000/defn/dev:latest
           command: ["/usr/bin/tini", "--"]
           args: ["make", "kumacp"]
+          volumeMounts:
+            - name: scratch
+              mountPath: /scratch
         - name: kuma-dp
           image: k3d-registry:5000/defn/dev:latest
           command: ["/usr/bin/tini", "--"]
           args: ["make", "kumahello"]
+          volumeMounts:
+            - name: scratch
+              mountPath: /scratch
         - name: buildkitd
           image: earthly/buildkitd:v0.6.19
           env:
@@ -48,11 +71,29 @@ spec:
                   http = true
                   insecure = true
           volumeMounts:
+            - name: scratch
+              mountPath: /scratch
             - name: earthly
               mountPath: /tmp/earthly
           tty: true
           securityContext:
             privileged: true
+        - name: wireguard
+          image: k3d-registry:5000/defn/dev:latest
+          args: ["tail", "-f", "/dev/null"]
+          command: ["/usr/bin/tini", "--"]
+          ports:
+          - containerPort: 51820
+            protocol: UDP
+            name: wireguard
+          securityContext:
+            capabilities:
+              add:
+                - NET_ADMIN
+            privileged: true
+          volumeMounts:
+            - name: scratch
+              mountPath: /scratch
       volumes:
         - name: docker-sock
           hostPath:
@@ -63,6 +104,9 @@ spec:
         - name: earthly
           hostPath:
             path: /mnt/earthly
+        - name: scratch
+          hostPath:
+            path: /mnt/scratch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
